syntax = "proto3";

package app.configs.v1;

import "google/protobuf/duration.proto";

option go_package = "github.com/fredyzh/user_manager/app/configs/v1";

message Bootstrap {
    Trace trace = 1;
    Server server = 2;
    Data data = 3;
    Auth auth = 4;
}

message Trace {
    string endpoint = 1;
    Loglevel level = 2;
}

message Server {
    message HTTP {
        bool on_cloud =1;
        string cloud_env=2;
        string network = 3;
        string addr = 4;
        int64 port=5;
        google.protobuf.Duration timeout = 6;
        bool lookup_host=7;
        bool use_remote=8;
    }
    message GRPC {
        bool on_cloud =1;
        string cloud_env=2;
        string network = 3;
        string addr = 4;
        int64 port=5;
        google.protobuf.Duration timeout = 6;
        bool lookup_host=7;
        bool use_remote=8;
    }
    HTTP http = 1;
    GRPC grpc = 2;
}

message Data {
    message Database {
        string driver = 1;
        string host = 2;
        int64 port = 3;
        string defaultdb = 4;
        string coll_user = 5;
        string coll_secrets = 6;
        string coll_token = 7;
        string user = 8;
        string password = 9;
        google.protobuf.Duration timeout = 10;
    }
    message Redis {
        string network = 1;
        string addr = 2;
        google.protobuf.Duration read_timeout = 3;
        google.protobuf.Duration write_timeout = 4;
    }
    Database database = 1;
    Redis redis = 2;
}

message Auth {
    string key = 1;
    string jwt_issuer=2;
    int64 jwt_token_expire=3;
    int64 jwt_refresh_expire=4;
    int64 jwt_max_refresh_count=5;
}

enum Loglevel{
	Info   = 0;
	Warn  = 4;
	Error  = 8;
    Debug  = -4;
}

